--- a/src/pretix/control/templates/pretixcontrol/item/restrictions.html
+++ b/src/pretix/control/templates/pretixcontrol/item/restrictions.html
@@ -4,7 +4,7 @@
 {% load formset_tags %}
 {% block inside %}
     <p>{% blocktrans trimmed %}
-        In this area, you can choose of a set of "restriction types" to restrict the availability of your item with
+        In this area, you can choose of a set of "restriction types" to restrict the availability of your product with
         certain conditions.
     {% endblocktrans %}</p>
     <form action="" method="post">
