--- a/src/pretix/control/templates/pretixcontrol/items/base.html
+++ b/src/pretix/control/templates/pretixcontrol/items/base.html
@@ -1,6 +1,6 @@
 {% extends "pretixcontrol/event/base.html" %}
 {% load i18n %}
-{% block title %}{% trans "Items" %}{% endblock %}
+{% block title %}{% trans "Products" %}{% endblock %}
 {% block content %}
 	{% block inside %}
 	{% endblock %}
