--- a/src/pretix/control/templates/pretixcontrol/items/quota.html
+++ b/src/pretix/control/templates/pretixcontrol/items/quota.html
@@ -18,8 +18,8 @@
 			<legend>{% trans "Items" %}</legend>
             <p>
                 {% blocktrans trimmed %}
-                    Please select the items or item variations this quota should be applied to. If you apply two
-                    quotas to the same items, it will only be available if <strong>both</strong> quotas have capacity
+                    Please select the products or product variations this quota should be applied to. If you apply two
+                    quotas to the same product, it will only be available if <strong>both</strong> quotas have capacity
                     left.
                 {% endblocktrans %}
             </p>
