--- a/src/pretix/control/templates/pretixcontrol/items/quotas.html
+++ b/src/pretix/control/templates/pretixcontrol/items/quotas.html
@@ -23,7 +23,7 @@
 		<thead>
 			<tr>
 				<th>{% trans "Quota name" %}</th>
-				<th>{% trans "Items" %}</th>
+				<th>{% trans "Products" %}</th>
 				<th>{% trans "Total capacity" %}</th>
 				<th>{% trans "Capacity left" %}</th>
 				<th></th>
