--- a/src/pretix/control/templates/pretixcontrol/event/base.html
+++ b/src/pretix/control/templates/pretixcontrol/event/base.html
@@ -46,7 +46,7 @@
         <li>
             <a href="{% url 'control:event.items' organizer=request.event.organizer.slug event=request.event.slug %}"
                     {% if "event.items" == url_name or "event.item." in url_name or url_name == "event.item" %}class="active"{% endif %}>
-                {% trans "Items" %}</a>
+                {% trans "Products" %}</a>
         </li>
         <li>
             <a href="{% url 'control:event.items.quotas' organizer=request.event.organizer.slug event=request.event.slug %}"
@@ -78,14 +78,6 @@
     <a href="#">
         <i class="fa fa-shopping-cart fa-fw"></i>
         {% trans "Orders" %}
-        <span class="fa arrow"></span>
     </a>
-    <ul class="nav nav-second-level">
-        <li>
-            <a href="{% url 'control:event.items' organizer=request.event.organizer.slug event=request.event.slug %}">
-                {% trans "View orders" %}
-            </a>
-        </li>
-    </ul>
 </li>
 {% endblock %}
