--- a/src/pretix/control/templates/pretixcontrol/items/category_delete.html
+++ b/src/pretix/control/templates/pretixcontrol/items/category_delete.html
@@ -1,12 +1,14 @@
 {% extends "pretixcontrol/items/base.html" %}
 {% load i18n %}
 {% load bootstrap3 %}
-{% block title %}{% trans "Delete item category" %}{% endblock %}
+{% block title %}{% trans "Delete product category" %}{% endblock %}
 {% block inside %}
-	<h1>{% trans "Delete item category" %}</h1>
+	<h1>{% trans "Delete product category" %}</h1>
 	<form action="" method="post" class="form-horizontal">
 		{% csrf_token %}
-		<p>{% blocktrans %}Are you sure you want to delete the category <strong>{{ category.name }}</strong>?{% endblocktrans %}</p>
+		<p>{% blocktrans trimmed with name=category.name %}
+            Are you sure you want to delete the category <strong>{{ name }}</strong>?
+        {% endblocktrans %}</p>
 		<div class="form-group submit-group">
             <a href="{% url "control:event.items.categories" organizer=request.event.organizer.slug event=request.event.slug %}" class="btn btn-default btn-cancel">
                 {% trans "Cancel" %}
