--- a/src/pretix/control/templates/pretixcontrol/items/index.html
+++ b/src/pretix/control/templates/pretixcontrol/items/index.html
@@ -1,15 +1,16 @@
 {% extends "pretixcontrol/items/base.html" %}
 {% load i18n %}
-{% block title %}{% trans "Items" %}{% endblock %}
+{% block title %}{% trans "Products" %}{% endblock %}
 {% block inside %}
-	<h1>{% trans "Items" %}</h1>
+	<h1>{% trans "Products" %}</h1>
     <p>
-        <a href="{% url "control:event.items.add" organizer=request.event.organizer.slug event=request.event.slug %}" class="btn btn-default"><i class="fa fa-plus"></i> {% trans "Create new item" %}</a>
+        <a href="{% url "control:event.items.add" organizer=request.event.organizer.slug event=request.event.slug %}"
+                class="btn btn-default"><i class="fa fa-plus"></i> {% trans "Create new product" %}</a>
     </p>
 	<table class="table table-condensed table-hover">
 		<thead>
 			<tr>
-				<th>{% trans "Item name" %}</th>
+				<th>{% trans "Product name" %}</th>
 				<th>{% trans "Category" %}</th>
 			</tr>
 		</thead>
