Provide a new API for plugins to add HTML to the <head> of the site

--- a/src/pretix/presale/templates/pretixpresale/event/base.html
+++ b/src/pretix/presale/templates/pretixpresale/event/base.html
@@ -14,6 +14,7 @@
         <script type="text/javascript" src="{% static "bootstrap/dist/js/bootstrap.js" %}"></script>
         <script type="text/javascript" src="{% static "pretixpresale/js/ui/main.js" %}"></script>
     {% endcompress %}
+    {{ html_head|safe }}
 </head>
 <body>
 <div class="container event">
