Payments via Stripe (#30)

--- a/src/pretix/presale/templates/pretixpresale/event/checkout_payment_form_default.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_payment_form_default.html
@@ -1,2 +1,4 @@
 {% load bootstrap3 %}
-{% bootstrap_form form layout='horizontal' %}
+<div class="form-horizontal">
+    {% bootstrap_form form layout='horizontal' %}
+</div>
