--- a/src/pretix/presale/static/pretixpresale/less/forms.less
+++ b/src/pretix/presale/static/pretixpresale/less/forms.less
@@ -1,3 +1,7 @@
 .panel-title .radio {
     margin-left: 20px;
 }
+.form-control + .form-control-feedback {
+    /* Fix for https://github.com/FortAwesome/Font-Awesome/issues/4313 */
+    .form-control-feedback;
+}
