--- a/src/pretix/control/templates/pretixcontrol/event/base.html
+++ b/src/pretix/control/templates/pretixcontrol/event/base.html
@@ -76,7 +76,7 @@
 </li>
 <li>
     <a href="{% url 'control:event.orders' organizer=request.event.organizer.slug event=request.event.slug %}"
-            {% if "event.orders" in url_name %}class="active"{% endif %}>
+            {% if "event.order" in url_name %}class="active"{% endif %}>
         <i class="fa fa-shopping-cart fa-fw"></i>
         {% trans "Orders" %}
     </a>
