Provide support for manipulting order status

--- a/src/pretix/control/static/pretixcontrol/less/main.less
+++ b/src/pretix/control/static/pretixcontrol/less/main.less
@@ -47,3 +47,10 @@ nav.navbar {
         }
     }
 }
+
+.btn-toolbar {
+    margin-bottom: 20px;
+}
+.container-fluid > .alert:first-child {
+    margin-top: 20px;
+}
