Bank imports in MT940 format

--- a/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/import_confirm.html
+++ b/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/import_confirm.html
@@ -43,8 +43,7 @@
                     </tr>
                 {% endfor %}
             </tbody>
-            <input type="hidden" name="cols" value="{{ rows.0|length }}" />
-            <input type="hidden" name="rows" value="{{ rows|length }}" />
+            <input type="hidden" name="confirm" value="true" />
 
         </table>
         <button class="btn btn-primary btn-lg pull-right" type="submit" style="margin-bottom: 10px">
