--- a/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/import_form.html
+++ b/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/import_form.html
@@ -5,7 +5,7 @@
         This page allows you to upload bank statement files to process incoming payments.
     {% endblocktrans %}</p>
     <p>{% blocktrans trimmed %}
-        Currently, only <code>.csv</code> files are supported.
+        Currently, this feature supports <code>.csv</code> files and files in the MT940 format.
     {% endblocktrans %}</p>
     <div class="panel panel-default">
         <div class="panel-heading">
