--- a/src/pretix/control/templates/pretixcontrol/event/settings.html
+++ b/src/pretix/control/templates/pretixcontrol/event/settings.html
@@ -2,42 +2,52 @@
 {% load i18n %}
 {% load bootstrap3 %}
 {% block inside %}
-	<form action="" method="post" class="form-horizontal">
-		{% if "success" in request.GET %}
-			<div class="alert alert-success">
-				{% trans "Your changes have been saved." %}
-			</div>
-		{% endif %}
-		{% csrf_token %}
-		<fieldset>
-			<legend>{% trans "General information" %}</legend>
-			{% bootstrap_field form.name layout="horizontal" %}
-			{% bootstrap_field form.slug layout="horizontal" %}
-			{% bootstrap_field form.date_from layout="horizontal" %}
-			{% bootstrap_field form.date_to layout="horizontal" %}
-			{% bootstrap_field form.currency layout="horizontal" %}
-		</fieldset>
-		<fieldset>
-			<legend>{% trans "Display settings" %}</legend>
-			{% bootstrap_field form.locale layout="horizontal" %}
-			{% bootstrap_field form.timezone layout="horizontal" %}
-			{% bootstrap_field form.show_date_to layout="horizontal" %}
-			{% bootstrap_field form.show_times layout="horizontal" %}
-		</fieldset>
-		<fieldset>
-			<legend>{% trans "Presale settings" %}</legend>
-			{% bootstrap_field form.presale_start layout="horizontal" %}
-			{% bootstrap_field form.presale_end layout="horizontal" %}
-		</fieldset>
-		<fieldset>
-			<legend>{% trans "Payment settings" %}</legend>
-			{% bootstrap_field form.payment_term_days layout="horizontal" %}
-			{% bootstrap_field form.payment_term_last layout="horizontal" %}
-		</fieldset>
-		<div class="form-group submit-group">
+    <form action="" method="post" class="form-horizontal">
+        {% if "success" in request.GET %}
+            <div class="alert alert-success">
+                {% trans "Your changes have been saved." %}
+            </div>
+        {% endif %}
+        {% csrf_token %}
+        <fieldset>
+            <legend>{% trans "General information" %}</legend>
+            {% bootstrap_field form.name layout="horizontal" %}
+            {% bootstrap_field form.slug layout="horizontal" %}
+            {% bootstrap_field form.date_from layout="horizontal" %}
+            {% bootstrap_field form.date_to layout="horizontal" %}
+            {% bootstrap_field form.currency layout="horizontal" %}
+        </fieldset>
+        <fieldset>
+            <legend>{% trans "Display settings" %}</legend>
+            {% bootstrap_field sform.locale layout="horizontal" %}
+            {% bootstrap_field sform.timezone layout="horizontal" %}
+            {% bootstrap_field sform.show_date_to layout="horizontal" %}
+            {% bootstrap_field sform.show_times layout="horizontal" %}
+        </fieldset>
+        <fieldset>
+            <legend>{% trans "Timeline" %}</legend>
+            {% bootstrap_field form.presale_start layout="horizontal" %}
+            {% bootstrap_field form.presale_end layout="horizontal" %}
+            {% bootstrap_field sform.payment_term_days layout="horizontal" %}
+            {% bootstrap_field sform.payment_term_last layout="horizontal" %}
+            {% bootstrap_field sform.last_order_modification_date layout="horizontal" %}
+        </fieldset>
+        <fieldset>
+            <legend>{% trans "Order process settings" %}</legend>
+            {% bootstrap_field sform.reservation_time layout="horizontal" %}
+            {% bootstrap_field sform.max_items_per_order layout="horizontal" %}
+            {% bootstrap_field sform.user_mail_required layout="horizontal" %}
+            {% bootstrap_field sform.attendee_names_asked layout="horizontal" %}
+            {% bootstrap_field sform.attendee_names_required layout="horizontal" %}
+        </fieldset>
+        <fieldset>
+            <legend>{% trans "E-Mail settings" %}</legend>
+            {% bootstrap_field sform.mail_from layout="horizontal" %}
+        </fieldset>
+        <div class="form-group submit-group">
             <button type="submit" class="btn btn-primary btn-save">
                 {% trans "Save" %}
             </button>
-		</div>
-	</form>
+        </div>
+    </form>
 {% endblock %}
