--- a/src/pretix/presale/templates/pretixpresale/event/base.html
+++ b/src/pretix/presale/templates/pretixpresale/event/base.html
@@ -33,7 +33,7 @@
                     {% trans "Login" %}</a>
             {% endif %}
         </div>
-        <h1>{{ event.name }} <small>{{ event.date_from|date }}{% if event.show_date_to %} – {{ event.date_to|date }}{% endif %}</small></h1>
+        <h1>{{ event.name }} <small>{{ event.date_from|date }}{% if event.settings.show_date_to %} – {{ event.date_to|date }}{% endif %}</small></h1>
     </div>
     {% if messages %}
         {% for message in messages %}
