--- a/src/pretix/control/templates/pretixcontrol/order/index.html
+++ b/src/pretix/control/templates/pretixcontrol/order/index.html
@@ -49,7 +49,7 @@
                         {% endif %}
                         {% if line.has_questions %}
                             <dl>
-                                {% if line.item.admission and event.settings.attendee_names_asked == 'True' %}
+                                {% if line.item.admission and event.settings.attendee_names_asked %}
                                     <dt>{% trans "Attendee name" %}</dt>
                                     <dd>{% if line.attendee_name %}{{ line.attendee_name }}{% else %}<em>{% trans "not answered" %}</em>{% endif %}</dd>
                                 {% endif %}
