Data structures and form elements for internationalized data

--- a/src/pretix/presale/templates/pretixpresale/event/checkout_questions.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_questions.html
@@ -14,7 +14,7 @@
                         <h4 class="panel-title">
                             <a data-toggle="collapse" href="#cp{{ form.pos.identity }}"
                                     data-parent="#questions_accordion">
-                                <strong>{{ form.pos.item }}</strong>
+                                <strong>{{ form.pos.item.name }}</strong>
                                 {% if form.pos.variation %}
                                     – {{ form.pos.variation }}
                                 {% endif %}
