--- a/src/pretix/control/templates/pretixcontrol/order/index.html
+++ b/src/pretix/control/templates/pretixcontrol/order/index.html
@@ -43,7 +43,7 @@
             {% for line in items.positions %}
                 <div class="row-fluid product-row">
                     <div class="col-md-4 col-xs-6">
-                        <strong>{{ line.item }}</strong>
+                        <strong>{{ line.item.name }}</strong>
                         {% if line.variation %}
                             – {{ line.variation }}
                         {% endif %}
