--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -77,7 +77,7 @@
                                 {% if item.short_description %}<p>{{ item.short_description }}</p>{% endif %}
                             </div>
                             <div class="col-md-2 col-xs-6 price">
-                                {{ event.currency }} {{ item.price|floatformat:2 }}
+                                {{ event.currency }} {{ item.price }}
                                 {% if item.tax_rate %}
                                     <br /><small>{% blocktrans trimmed with rate=item.tax_rate %}
                                     incl. {{ rate }}% taxes
