--- a/src/pretix/plugins/stripe/templates/pretixplugins/stripe/control.html
+++ b/src/pretix/plugins/stripe/templates/pretixplugins/stripe/control.html
@@ -5,6 +5,10 @@
         <p>{% blocktrans trimmed %}
             This order has been paid via Stripe.
         {% endblocktrans %}</p>
+    {% elif order.status == "p" %}
+        <p>{% blocktrans trimmed %}
+            This order has been planned to be paid via Stripe and has been marked as refunded.
+        {% endblocktrans %}</p>
     {% else %}
         <p>{% blocktrans trimmed %}
             This order has been planned to be paid via Stripe, but the payment has not yet been completed.
