--- a/src/pretix/control/templates/pretixcontrol/order/index.html
+++ b/src/pretix/control/templates/pretixcontrol/order/index.html
@@ -20,6 +20,9 @@
                 <div class="btn-group" role="group">
                     {% if order.status == 'n' %}
                         <button name="status" value="p" class="btn btn-default">{% trans "Mark as paid" %}</button>
+                        <a href="{% url "control:event.order.extend" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}" class="btn btn-default">
+                            {% trans "Extend payment term" %}
+                        </a>
                         <a href="{% url "control:event.order.transition" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}?status=c" class="btn btn-default">
                             {% trans "Cancel order" %}
                         </a>
